Second Working Version

--- a/_site.yml
+++ b/_site.yml
@@ -4,11 +4,14 @@ navbar:
   title: "Catherine's Website"
   left:
     - text: "Home"
-      icon: fa("home", color = "blue", size = 5)
+      icon: fa_home( color = "blue", size = 1)
       href: index.html
     - text: "GIS Work"
-      icon: fa("grav", color = "blue", size = 5)
+      icon: fa_grav(color = "blue", size = 1)
       href: geog176A.html
+    - text: "CV"
+      icon: fa_info( color = "blue", size = 1)
+      href: catherinerauch.html
 output:
   html_document:
     theme: yeti
